Fix: align 수정 (수정만 하고 확인은 못한 상태)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -136,6 +136,18 @@
   border-radius: 21.5px;
 }
 
+.ql-align-center {
+  text-align: center;
+}
+.ql-align-right {
+  text-align: right;
+}
+.ql-align-left {
+  text-align: left;
+}
+
+
+
 @media (max-width: 767px) {
   .ql-container.ql-snow .ql-editor {
     height: 600px;
